--- a/debian/control
+++ b/debian/control
@@ -21,9 +21,23 @@ Description: Enterprise-grade Open-source Network Management Platform (Full Inst
  This package provides the components needed for a reasonable default
  installation of OpenNMS.
 
+Package: opennms-upgrade
+Architecture: all
+Depends: bash, rsync
+Description: Enterprise-grade Open-source Network Management Platform (Upgrade Tools)
+ OpenNMS is an enterprise-grade network management system written in Java.
+ .
+ OpenNMS can monitor various network services to determine status and service
+ level availability.  Data collection is performed using protocols such as SNMP
+ to generate reports and alert on thresholds.  An extensible event management
+ and notification system handles both internally and externally generated
+ events (such as SNMP traps), and generates notices via email, pager, SMS, etc.
+ .
+ This package provides tools for cleanly handling upgrades.
+
 Package: opennms-db
 Architecture: all
-Depends: postgresql-9.4 | postgresql-9.3 | postgresql-9.2 | postgresql-9.1 | postgresql-9.0 | postgresql-8.4 (>= 8.4.1), iplike-pgsql94 | iplike-pgsql93 | iplike-pgsql92 | iplike-pgsql91 | iplike-pgsql90 (>= 1.0.8) | iplike-pgsql84 (>= 1.0.8), debconf
+Depends: postgresql-9.4 | postgresql-9.3 | postgresql-9.2 | postgresql-9.1 | postgresql-9.0 | postgresql-8.4 (>= 8.4.1), iplike-pgsql94 | iplike-pgsql93 | iplike-pgsql92 | iplike-pgsql91 | iplike-pgsql90 (>= 1.0.8) | iplike-pgsql84 (>= 1.0.8), debconf, opennms-upgrade (>=${binary:Version})
 Description: Enterprise-grade Open-source Network Management Platform (Database)
  OpenNMS is an enterprise-grade network management system written in Java.
  .
@@ -40,7 +54,7 @@ Description: Enterprise-grade Open-source Network Management Platform (Database)
 
 Package: opennms-server
 Architecture: all
-Depends: opennms-common (=${binary:Version}), libopennms-java (=${binary:Version}), libopennmsdeps-java (=${binary:Version}), mailx
+Depends: opennms-common (=${binary:Version}), libopennms-java (=${binary:Version}), libopennmsdeps-java (=${binary:Version}), opennms-upgrade (>=${binary:Version}), mailx
 Suggests: jrrd, rrdtool, postgresql-client-9.4 | postgresql-client-9.3 | postgresql-client-9.2 | postgresql-client-9.1 | postgresql-client-9.0 | postgresql-client-8.4
 Description: Enterprise-grade Open-source Network Management Platform (Daemon)
  OpenNMS is an enterprise-grade network management system written in Java.
@@ -118,7 +132,7 @@ Description: Enterprise-grade Open-source Network Management Platform (NCS)
 
 Package: opennms-common
 Architecture: all
-Depends: ${perl:Depends}, libdbi-perl, libdbd-pg-perl, libgetopt-mixed-perl
+Depends: ${perl:Depends}, libdbi-perl, libdbd-pg-perl, libgetopt-mixed-perl, opennms-upgrade (>=${binary:Version})
 Recommends: libnet-snmp-perl, libxml2-utils, libwww-perl, libxml-twig-perl
 Description: Enterprise-grade Open-source Network Management Platform (Common Files)
  OpenNMS is an enterprise-grade network management system written in Java.
@@ -134,7 +148,7 @@ Description: Enterprise-grade Open-source Network Management Platform (Common Fi
 
 Package: libopennms-java
 Architecture: all
-Depends: openjdk-7-jre | sun-java7-jre | oracle-java7-installer | java7-runtime | java7-runtime-headless, jicmp, jicmp6
+Depends: openjdk-7-jre | sun-java7-jre | oracle-java7-installer | java7-runtime | java7-runtime-headless, jicmp, jicmp6, opennms-upgrade (>=${binary:Version})
 Replaces: opennms-common (<< 1.3.0), libicmp-jni (<< 1.3.0)
 Description: Enterprise-grade Open-source Network Management Platform (OpenNMS Libraries)
  OpenNMS is an enterprise-grade network management system written in Java.
@@ -149,7 +163,7 @@ Description: Enterprise-grade Open-source Network Management Platform (OpenNMS L
 
 Package: libopennmsdeps-java
 Architecture: all
-Depends: openjdk-7-jre | sun-java7-jre | oracle-java7-installer | java7-runtime | java7-runtime-headless
+Depends: openjdk-7-jre | sun-java7-jre | oracle-java7-installer | java7-runtime | java7-runtime-headless, opennms-upgrade (>=${binary:Version})
 Description: Enterprise-grade Open-source Network Management Platform (Required Libraries)
  OpenNMS is an enterprise-grade network management system written in Java.
  .
